--- a/Nova pasta (4)/index.html
+++ b/Nova pasta (4)/index.html
@@ -39,6 +39,9 @@
         <h1>Eu te amo!</h1>
         <div class="heart">&hearts;</div>
         <p>
+            Fiz essa aba só pra te lembrar o quão importante vc é pra mim.
+        </p>
+        <p>
             Cada momento ao seu lado é uma bênção. Você ilumina a minha vida com seu sorriso e 
             preenche meu coração com um amor infinito. Não há palavras suficientes para expressar 
             o quanto você significa para mim.
